--- a/index.html
+++ b/index.html
@@ -124,18 +124,18 @@
         </a>
         
         <a
-           href="https://codepen.io/joshmb8/full/LYEwMmQ" 
+           href="https://codepen.io/joshmb8/full/JjdrLKb" 
            target="_blank" 
            class="project project-tile"
            >
           <img 
                class="project-image"
-               src="https://github.com/JoshMB8/img_for_codepen/blob/master/imgs/Tribute_Page.jpg?raw=true"
+               src="https://github.com/JoshMB8/img_for_codepen/blob/master/imgs/JS_Calculator.jpg?raw=true"
                alt="project"
                />
           <p class="project-title">
             <span class="code">&lt;</span>
-            Tribute Page
+            JavaScript Calculator
             <span class="code">&#47;&gt;</span>
           </p>
         </a>          
